# Ludo-Board-Game-using-OS-Concepts-like-threads-

./: README.md
OS_Project/CODE/: CMakeLists.txt  Shurulls Ludo.pro  Source Code.cpp  resources.qrc
